Bug 153961 - contextual spacing / "Do not add space..." does not work and is not saved.
Summary: contextual spacing / "Do not add space..." does not work and is not saved.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:27.2.0 target:26.8.0.0.beta2
Keywords:
Depends on:
Blocks: Paragraph-Line-Spacing
  Show dependency treegraph
 
Reported: 2023-03-04 12:27 UTC by lf-bt
Modified: 2026-06-30 12:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lf-bt 2023-03-04 12:27:02 UTC
Description:
Using the "Do not add space between paragraphs of the same style" paragraph style option (aka. "style:contextual-spacing") under "Indents & Spacing" does not seem to work in Impress (in contrast to Writer)

Also, when I check the box and save + load the file, it is no longer checked.

Either it should work, or the checkbox should not be presented to the user at all.

Steps to Reproduce:
1. Create new Presentation
2. Add 2 lines (paragraphs) of text
3. "Select All" Text in that Frame
4. Context-menu -> Paragraph... -> Indents & Spacing
5. Increase Spacing "Below paragraph", activate "Do not add space between paragraphs of the same style"

Optional:
6. Save file
7. Open file
8. Look at setting in "Paragraph..." again

Actual Results:
After 5: Spacing is added between both lines / paragraphs.

After 8: Box is no longer checked.

Expected Results:
After 5: No Spacing is added between both lines / paragraphs.

After 8: Box should still be checked.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.4.5.1 / LibreOffice Community
Build ID: 40(Build:1)
CPU threads: 24; OS: Linux 5.19; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Debian package version: 4:7.4.5-2
Calc: threaded
Comment 1 stragu 2023-05-09 21:46:32 UTC
Reproduced in a recent master build:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 002ae41bb6088002ba3ed0188ac822fb823a23f9
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Same issue in LO 6.0.0.3.

In OOo 3.3, the setting didn't exist.
Comment 2 QA Administrators 2025-05-09 03:11:51 UTC Comment hidden (obsolete, spam)
Comment 3 Justin L 2026-06-29 23:19:36 UTC
The option was added in 4.2, but too many bibisect builds fail to do a bibisect.
But I figured out it was done with https://gerrit.libreoffice.org/c/core/+/4047
(because Writer - New paragraph style now shows it too).

Contextual spacing was implemented (for the UI) in 3.6.0 by
commit 8631dbf85fb5ed56d225e32ea5a9c36c96b0d649
Author: Miklos Vajna on Mon Mar 12 18:42:33 2012 +0100
    cui: implement contextual spacing UI

The same thing is true for "Automatic first line indent".
Comment 4 Commit Notification 2026-06-30 10:53:32 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/05fba68ccebdd56dd7697ab739e4332b11b0e832

tdf#153961 cui para style: don't show unused AutoFirst or Contextual

It will be available in 27.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2026-06-30 12:02:46 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-8":

https://git.libreoffice.org/core/commit/def4b10b6cb3e542553f0339471bdf82b654ed1e

tdf#153961 cui para style: don't show unused AutoFirst or Contextual

It will be available in 26.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.