tdf#153961 cui para style: don't show unused AutoFirst or Contextual

This fixes a 4.2 regression from
324141f21bf2280d7613c4056ee8cd997ea345f9
where Hide = TRUE ;
was set to <property name="visible">True</property>

In Impress and Draw, although they do have paragraph styles,
they do not support an Automatic first line indent.
So don't show that option when the tab is loaded in Draw/Impress.

The same is true for contextual spacing's
'Do not add space between paragraphs of the same style'.

Prior to 4.2, for Writer it seems to be an implementation error
that contextual spacing was not enabled on paragraph styles,
only on direct paragraph properties.
So I enabled it now - as per SvxStdParagraphTabPage::PageCreated.

Change-Id: If68a511e515b928d04d14ef231ecb01cfc8377ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/207480
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins